--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
             <hr>
 
-            <div class="media" th:each="question : ${questionList}">
+            <div class="media" th:each="question : ${pages.data}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded" th:src="${question.user.getAvatarUrl()}">
@@ -68,9 +68,37 @@
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
                     <span th:text="${question.getDescription()}"></span><br>
-                    <span class="text-desc" th:text="${question.getCommentCount()}+' 个评论 • '+${question.getViewCount()}+' 次浏览 • '+ ${#dates.format(question.getGmtCreate(),'dd-MMMM-yyyy')}">
+                    <span class="text-desc" th:text="${question.getCommentCount()}+' 个评论 • '+${question.getViewCount()}+' 次浏览 • '+ ${#dates.format(question.getGmtCreate(),'dd-MMMM-yyyy')}"/>
                 </div>
             </div>
+
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${pages.showFirstPage}">
+                        <a th:href="@{/(page=1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pages.showPrevious}">
+                        <a th:href="@{/(page=${pages.page}-1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page:${pages.pages}" th:class="${pages.page == page}?'active':''">
+                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                    </li>
+                    <li th:if="${pages.showNext}">
+                        <a th:href="@{/(page=${pages.page}+1)}" aria-label="Previous">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pages.showEndPage}">
+                        <a th:href="@{/(page=${pages.totalPage})}" aria-label="Previous">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
 
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
