添加拦截器&问题详情页

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,9 @@
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                    <h4 class="media-heading">
+                        <a th:href="@{'/question/'+${question.id}}"  th:text="${question.getTitle()}"></a>
+                    </h4>
                     <span th:text="${question.getDescription()}"></span><br>
                     <span class="text-desc" th:text="${question.getCommentCount()}+' 个评论 • '+${question.getViewCount()}+' 次浏览 • '+ ${#dates.format(question.getGmtCreate(),'dd-MMMM-yyyy')}"/>
                 </div>
