--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
                         <a th:href="@{'/question/'+${question.id}}"  th:text="${question.getTitle()}"></a>
                     </h4>
                     <span th:text="${question.getDescription()}"></span><br>
-                    <span class="text-desc" th:text="${question.getCommentCount()}+' 个评论 • '+${question.getViewCount()}+' 次浏览 • '+ ${#dates.format(question.getGmtCreate(),'dd-MMMM-yyyy')}"/>
+                    <span class="text-desc" th:text="${question.getCommentCount()}+' 个评论 • '+${question.getViewCount()}+' 次浏览 • '+ ${#dates.format(question.getGmtCreate(),'yy-MM-dd HH:mm')}"/>
                 </div>
             </div>
 
